--- a/src/main/templates/META-INF/mods.toml
+++ b/src/main/templates/META-INF/mods.toml
@@ -48,11 +48,11 @@ config = "${mod_id}.mixins.json"
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies."${mod_id}"]] #optional
 # the modid of the dependency
-modId = "neoforge" #mandatory
+modId = "forge" #mandatory
 # The type of the dependency. Can be one of "required", "optional", "incompatible" or "discouraged" (case insensitive).
 # 'required' requires the mod to exist, 'optional' does not
 # 'incompatible' will prevent the game from loading when the mod exists, and 'discouraged' will show a warning
-type = "required" #mandatory
+mandatory = true #mandatory
 # Optional field describing why the dependency is required or why it is incompatible
 # reason="..."
 # The version range of the dependency
@@ -66,7 +66,7 @@ side = "BOTH"
 # Here's another dependency
 [[dependencies."${mod_id}"]]
 modId = "minecraft"
-type = "required"
+mandatory = true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
 versionRange = "${minecraft_version_range}"
 ordering = "NONE"
@@ -74,7 +74,7 @@ side = "BOTH"
 
 [[dependencies."${mod_id}"]]
 modId = "chatimage"
-type = "optional"
+mandatory = false
 versionRange = "[1.4.6, 2)"
 ordering = "AFTER"
 side = "BOTH"
